<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_layout"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/logoreg"
        android:contentDescription="@string/imgDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/log_in"
        android:textAppearance="?android:textAppearanceLarge" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="@drawable/backgroud_login"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:autofillHints=""
        android:background="@drawable/backgroud_login"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="8dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" tools:targetApi="o" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/backgroud_login"
        android:elevation="16dp"
        android:padding="10dp"
        android:text="@string/log_in"
        android:textColor="@android:color/white" tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/signupbelow_log"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>